Add valid routing, Hierarchy and login with register functionality

--- a/templates/todo/register/index.html.twig
+++ b/templates/todo/register/index.html.twig
@@ -3,41 +3,60 @@
 {% block main %}
 
 <h2 class="title h2">Register</h2>
-<form action="./?action=register" method="post" class="form">
+{{ form_start(form, {'attr': {'novalidate':'novalidate', 'class':'form'}}) }}
     <div class="name-wrapper">
         <div>
-            <label for="first-name" class="first-name">First name: <sup>*</sup></label>
-            <input type="text" id="first-name" class="first-name"
-                   value="" name="first_name" placeholder="Your first name" required>
-            <span class="invalid-feedback"></span>
+            <label for="todo_user_name" class="first-name">First name: <sup>*</sup></label>
+            {% if form.name.vars.errors|length %}
+                {{ form_widget(form.name, { 'attr': {'class': 'first-name is-invalid', 'placeholder': 'Your first name'} }) }}
+            {% else %}
+                {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}
+            {% endif %}
+            <span>
+                {{ form_errors(form.name) }}
+            </span>
         </div>
         <div>
-            <label for="last-name" class="last-name">Last name:</label>
-            <input type="text" id="last-name" class="last-name" value="" name="last_name" placeholder="Your last name">
+            <label for="todo_user_last_name" class="last-name">Last name:</label>
+            {{ form_widget(form.last_name, { 'attr': {'class': 'last-name', 'placeholder': 'Your last name'} }) }}
+            <span>
+                {{ form_errors(form.last_name) }}
+            </span>
         </div>
     </div>
     <div>
-        <label for="email" class="email">E-Mail: <sup>*</sup></label>
-        <input type="email" id="email" class="email"
-               value="" name="email" placeholder="Your E-Mail" required>
-        <span class="invalid-feedback"></span>
+        <label for="todo_user_email" class="email">E-Mail: <sup>*</sup></label>
+        {% if form.email.vars.errors|length %}
+            {{ form_widget(form.email, { 'attr': {'class': 'email is-invalid', 'placeholder': 'Your E-Mail'} }) }}
+        {% else %}
+            {{ form_widget(form.email, { 'attr': {'class': 'email'} }) }}
+        {% endif %}
+        <div>
+            {{ form_errors(form.email) }}
+        </div>
     </div>
     <div>
-        <label for="password" class="password">Password: <sup>*</sup></label>
-        <input type="password" id="password" class="password"
-               value="" name="password" placeholder="Your password" required>
-        <span class="invalid-feedback"></span>
+        <label for="todo_user_password_first" class="password">Password: <sup>*</sup></label>
+        {% if form.password.first.vars.errors|length %}
+            {{ form_widget(form.password.first, { 'attr': {'class': 'password is-invalid', 'placeholder': 'Your password'} }) }}
+        {% else %}
+            {{ form_widget(form.password.first, { 'attr': {'class': 'password'} }) }}
+        {% endif %}
+        <div>
+            {{ form_errors(form.password.first) }}
+        </div>
     </div>
     <div>
         <label for="confirm-password" class="confirm-password">Confirm password: <sup>*</sup></label>
-        <input type="password" id="confirm-password" class="confirm-password"
-               value="" name="confirm_password" placeholder="Confirm your password" required>
-        <span class="invalid-feedback"></span>
+        {{ form_widget(form.password.second, { 'attr': {'class': 'confirm-password', 'placeholder': 'Confirm your password'} }) }}
+        <div>
+            {{ form_errors(form.password.second) }}
+        </div>
     </div>
     <div class="submitting-container">
         <a href="{{ path('todo_login') }}" class="button-back">Back</a>
         <button class="register-button" type="submit">Register</button>
     </div>
-</form>
+{{ form_end(form) }}
 
 {% endblock %}
