--- a/templates/todo/twigBlocks/progression.html.twig
+++ b/templates/todo/twigBlocks/progression.html.twig
@@ -1,7 +1,7 @@
 <section class="progression-content">
     <div class="date-wrapper">
-        <div class="day">213</div>
-        <div class="month">MN</div>
+        <div class="day">{{ 'now' | date('d') }}</div>
+        <div class="month">{{ 'now' | date('M') }}</div>
     </div>
     <div class="content-wrapper">
         <h2 class="headline h2">Today's Tasks</h2>
