--- a/templates/todo/twigBlocks/profile-popup.html.twig
+++ b/templates/todo/twigBlocks/profile-popup.html.twig
@@ -1,9 +1,12 @@
 <div class="profile-container">
     <div class="left-side-wrapper">
-        <img src="src/pics/<?php echo $_SESSION['user_profile_image']; ?>" alt="profile image">
-        <div class="current-level">1</div>
+        <img src="/Todo-App/public/src/pics/{{ app.user.profileImage }}" alt="profile image">
+        <div class="current-level">{{ app.user.level }}</div>
     </div>
     <div class="profile-information">
-
+        {{ app.user.name }}
+        {% if(app.user.lastname) %}
+            <div>{{ app.user.lastname }}</div>
+        {% endif %}
     </div>
 </div>
