Fixed popup settings name color and logout button styles

--- a/public/src/styles/elements/_settings-popup.scss
+++ b/public/src/styles/elements/_settings-popup.scss
@@ -126,7 +126,8 @@
                 align: center;
             }
             width: 100%;
-            button {
+            button,
+            a {
                 @include default-button-states();
                 display: block;
                 color: white;
