--- a/templates/todo/twigBlocks/profile-popup.html.twig
+++ b/templates/todo/twigBlocks/profile-popup.html.twig
@@ -4,7 +4,7 @@
         <div class="current-level">{{ app.user.level }}</div>
     </div>
     <div class="profile-information">
-        {{ app.user.name }}
+        <div>{{ app.user.name }}</div>
         {% if(app.user.lastname) %}
             <div>{{ app.user.lastname }}</div>
         {% endif %}
