Add delete button

--- a/templates/todo/twigBlocks/settings.html.twig
+++ b/templates/todo/twigBlocks/settings.html.twig
@@ -32,6 +32,6 @@
         {{ include('todo/twigBlocks/name-popup.html.twig') }}
         {{ include('todo/twigBlocks/password-popup.html.twig') }}
         {{ include('todo/twigBlocks/image-popup.html.twig') }}
-        <?php require_once("templates/includes/delete-popup.php"); ?>
+        {{ include('todo/twigBlocks/delete-popup.html.twig') }}
     </div>
 </div>
