Fixed add-todo-popup functionality

--- a/templates/todo/index.html.twig
+++ b/templates/todo/index.html.twig
@@ -6,7 +6,7 @@
         <section class="todos">
             <div class="todos-header">
                 <h3 class="h3 headline">In progression</h3>
-                <a href="./#todo-popup" class="button add-todo"></a>
+                <a href="./todo/#todo-popup" class="button add-todo"></a>
                 <div class="description">Today</div>
             </div>
             <div class="todos-wrapper">
