--- a/templates/todo/twigBlocks/todo-popup.html.twig
+++ b/templates/todo/twigBlocks/todo-popup.html.twig
@@ -1,6 +1,6 @@
 <div class="todo-popup" id="todo-popup">
     <div class="content">
-        <a href="./" class="button"></a>
+        <a href="./todo/" class="button"></a>
         <form action="./?action=create" class="add-todo" method="post">
             <div>
                 <label for="title">Title: <sup>*</sup></label>
