--- a/templates/todo/index.html.twig
+++ b/templates/todo/index.html.twig
@@ -34,3 +34,7 @@
         </section>
     </div>
 {% endblock %}
+
+{% block popup %}
+    {{ include('todo/twigBlocks/todo-popup.html.twig') }}
+{% endblock %}
