--- a/templates/todo/twigBlocks/main-navigation-sidebar.html.twig
+++ b/templates/todo/twigBlocks/main-navigation-sidebar.html.twig
@@ -16,10 +16,10 @@
                 </div>
             </li>
             <li class="today">
-                <a href="#">Today</a>
+                <a href="{{ path('todo') }}">Today</a>
             </li>
             <li class="done-todos">
-                <a href="#">Done Todos</a>
+                <a href="{{ path('done_todos') }}">Done Todos</a>
             </li>
             <li>
                 <button class="button" data-settings-button>Settings</button>
