--- a/templates/todo/twigBlocks/password-popup.html.twig
+++ b/templates/todo/twigBlocks/password-popup.html.twig
@@ -1,19 +1,15 @@
 <div class="password-container" data-password-container>
     {{ include('todo/twigBlocks/profile-popup.html.twig') }}
-    <form action="#" method="post" class="form">
-        <div>
-            <label for="current-password">Current Password:</label>
-            <input type="password" class="input-option" name="current-password" id="current-password" placeholder="Your current password">
-        </div>
+    {{ form_start(userPasswordForm, {'attr': {'novalidate':'novalidate', 'class':'form'}}) }}
         <div>
             <label for="new-password">New password:</label>
-            <input type="password" class="input-option" name="new-password" id="new-password" placeholder="New password">
+            {{ passwordFirst|raw }}
         </div>
         <div>
             <label for="repeat-new-password">Repeat new password:</label>
-            <input type="password" class="input-option" name="repeat-new-password" id="repeat-new-password" placeholder="Repeat new password">
+            {{ passwordConfirm|raw }}
         </div>
         <button class="submit" type="submit">Apply</button>
-    </form>
+    {{ form_end(userPasswordForm) }}
     {{ include('todo/twigBlocks/button-back-popup.html.twig') }}
 </div>
