Fixed Register Form styling and markup

--- a/public/src/styles/components/_register.scss
+++ b/public/src/styles/components/_register.scss
@@ -33,4 +33,10 @@
             }
         }
     }
+    ul {
+        @include reset-list();
+        > li {
+            color: #d60f0f;
+        }
+    }
 }
