Add client-side validation to register form

--- a/public/src/styles/components/_login.scss
+++ b/public/src/styles/components/_login.scss
@@ -91,6 +91,13 @@
                             }
                         }
                     }
+                    .validation {
+                        display: none;
+                        color: #d60f0f;
+                        margin: {
+                            bottom: 0;
+                        }
+                    }
                 }
             }
             div {
@@ -102,6 +109,13 @@
                     bottom: rem-calc(20);
                 }
                 width: 100%;
+                .validation {
+                    display: none;
+                    color: #d60f0f;
+                    margin: {
+                        bottom: 0;
+                    }
+                }
                 &.submitting-container {
                     flex: {
                         direction: row;
