--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import "elements/link";
 @import "elements/settings-popup";
 @import "elements/todo-popup";
+@import "elements/form-validation";
 
 //COMPONENTS
 @import "components/grid";
