--- a/templates/todo/twigBlocks/password-popup.html.twig
+++ b/templates/todo/twigBlocks/password-popup.html.twig
@@ -1,13 +1,15 @@
 <div class="password-container" data-password-container>
     {{ include('todo/twigBlocks/profile-popup.html.twig') }}
-    {{ form_start(userPasswordForm, {'attr': {'novalidate':'novalidate', 'class':'form'}}) }}
+    {{ form_start(userPasswordForm, {'attr': {'novalidate':'novalidate', 'class':'form settings-password'}}) }}
         <div>
             <label for="new-password">New password:</label>
             {{ passwordFirst|raw }}
+            <div class="validation"></div>
         </div>
         <div>
             <label for="repeat-new-password">Repeat new password:</label>
             {{ passwordConfirm|raw }}
+            <div class="validation"></div>
         </div>
         <button class="submit" type="submit">Apply</button>
     {{ form_end(userPasswordForm) }}
